	* "Protect details" toggle added to Kuwahara-Nagao blur
	* Gaussian blur, Unsharp mask and Difference of Gaussians effects now use multithreading to utilize all available CPU cores
	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport
	* sRGB colour scale generation added to palette editor
	* sRGB gradients added
	* "Palette->Pick Gradient" approximates an A->B gradient using colours from current palette (see handbook section 3.3.9)
	* "Image->Segment" added : See handbook section 6.10 for details
	* Posterize function in Transform Colour window now has 3 types - Bitwise, Truncated, Rounded
	* Toggle to transform RGB clipboard image added to Transform Colour window
	* The Convert To Indexed window now remembers the previous settings in that mtPaint session
	* Text pasting tools now support multiline text (use Ctrl+Enter to insert line breaks)
	* Animated GIF and multipage TIFF files now can be loaded into layers (one frame/page per layer)
	* GIF animation file exploding is now done internally in mtPaint, not Gifsicle
	* "Explode Frames" can now save frames in any suitable supported file format
	* Netpbm file formats (PBM/PGM/PPM/PAM) save/load added
	* PCX file format save/load added
	* SVG file format import added (using librsvg; requires GTK+ 2.4 or later)
	* Better support for loading CMYK TIFF files as RGB/RGBA
	* ICC colour profiles embedded in PNG, JPEG and TIFF images now can be applied on load (using LittleCMS)
	* JPEG2000 file format support now can be compiled with either JasPer or OpenJPEG library
	* "Palette->Open" now can extract palette from indexed images in any supported file format
	* "Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
	* Filename and modified status now part of undo system
	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"