@@ -22,6 +22,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport
 	* sRGB colour scale generation added to palette editor
 	* sRGB gradients added
+	* Line tool now uses stroke gradient when no gradient placement exists
 	* "Palette->Pick Gradient" approximates an A->B gradient using colours from current palette (see handbook section 3.3.9)
 	* "Image->Segment" added : See handbook section 6.10 for details
 	* Posterize function in Transform Colour window now has 3 types - Bitwise, Truncated, Rounded
